# clipdir

./: .gitignore  Cargo.toml  README.md
src/: common.rs  main.rs
