[package]
name = "clipdir"
description = "wayland clipboard manager with a syncable directory backend"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Justin Kromlinger <mail@hashworks.net>"]
homepage = "https://github.com/hashworks/clipdir"
repository = "https://github.com/hashworks/clipdir"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["clipboard", "manager", "wayland", "sync", "directory"]

[dependencies]
anyhow = "1.0.95"
chrono = "0.4.39"
clap = { version = "4.5.23", features = ["cargo", "env", "string"] }
infer = "0.19.0"
